--- a/config/database.yml
+++ b/config/database.yml
@@ -4,22 +4,60 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
-default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+#default: &default
+  #adapter: sqlite3
+  #pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  #timeout: 5000
 
-development:
-  <<: *default
-  database: db/development.sqlite3
+#development:
+  #<<: *default
+  #database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+#test:
+  #<<: *default
+  #database: db/test.sqlite3
+
+#production:
+  #<<: *default
+ # database: db/production.sqlite3
+
+
+  # Postgresql config
+development:
+  adapter: postgresql
+  encoding: unicode
+  database: visys_development
+  pool: 5
+  host:     localhost
+  username: visys_admin
+  password: root2017
+
 test:
-  <<: *default
-  database: db/test.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: visys_test
+  pool: 5
+  host:     localhost
+  username: visys_admin
+  password: root2017
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: visys_production
+  pool: 5
+  host:     localhost
+  username: visys_admin
+  password: root2017
+
+staging:
+  adapter: postgresql
+  encoding: unicode
+  database: visys_staging
+  pool: 5
+  host:     localhost
+  username: visys_admin
+  password: root2017
